assets/less/edware.less
/* ... */
.claimToolTipSection {
  width: 315px;
  color: @color-B1;
  
  .left {
    width: 60px;
  }
  
  .title {
    font-size: 13px;
    line-height: 13px;
    margin-bottom: 5px;
  } 
  
  .score {
    border-radius: 5px 5px 5px 5px;
    display: table;
    float: left;
    font-size: 16px;
    height: 28px;
    text-align: center;
    width: 50px;
    background: @color-B9;
    color: @color-white;
    
    span {
      vertical-align: middle;
      display: table-cell;
    }
  }
  
  .description {
    margin-left: 65px;
    font-size: 12px;
    line-height: 17px;
    min-height: 90px;
  }
  
  hr {
    margin: 10px 0;
  }
  
  .errorBand {
    font-size: 13px;
  }
}

.claimsPopover {
  padding: 0;
}
.gridHeight100 {

  tr.jqgrow td {
    height: 100px;
  }
  .ui-jqgrid tr.footrow {
    td {
      height: 100px;
    }
  }
  
  .ui-jqgrid tr.jqgrow td {
    white-space: normal !important;
    padding: 4px 2px;
    a {
      float: left;
    }
  }
  
  .ui-jqgrid .ui-jqgrid-view {
    font-size: 13px;
  }
  
  .ui-jqgrid .ui-jqgrid-htable th.ui-th-column:first-child div {
    margin-left: 20px;
  }
  
  .alignmentLine {
    background: @color-B7;
    height: 100px;
    position: absolute;
    margin-top: -60px;
    width: 1px;
  }
  .barContainer {
    margin-left: 30px;
  }
}

.populationBar {
  width: 265px;
  margin-left: 10px;
  float: left;
  
  .bar {
    font-size: 11px;
    font-weight: normal;
    cursor: pointer;
  }
}
  
#select_measure {
  float: right;
  margin-right: 20px;
  
  .btn-group {
    float: right;
    z-index: 4999;
  }
}

#select_measure_title {
  float: left;
  margin-right: 5px;
  margin-top: 6px;
}

.claim_name {
  font-weight: normal;
  font-size: 11px;
  line-height: 14px;
  margin: 0;
  text-align: center;
  padding: 2px 0;
}
.claim_score_down_arrow_bar {
  background-image: -moz-linear-gradient(center top , #d3d3d3, #565656);
  background-image: -webkit-linear-gradient(top ,#d3d3d3, #565656); 
  background-image: -ms-linear-gradient(top , #d3d3d3, #565656); filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#d3d3d3, endColorstr=#565656, GradientType=0);
}
.claim_score_up_arrow_bar {
  background-image: -moz-linear-gradient(center top , #565656, #d3d3d3);
  background-image: -webkit-linear-gradient(top ,#565656, #d3d3d3); 
  background-image: -ms-linear-gradient(top , #565656, #d3d3d3); filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#565656, endColorstr=#d3d3d3, GradientType=0);
  bottom: 0;
}
.claim_score_arrow_bar {
  width:12px;
  position:absolute;
  margin:0;
  padding:0;
}

/* Sorting Arrow styles */
.ui-icon {
    height: 16px;
    width: 16px;
}
.ui-icon, .ui-widget-content .ui-icon {
    background-image: url("../css/3p/jqueryui/1.10.2/themes/base/images/ui-icons_222222_256x240.png");
}
.ui-icon-triangle-1-s {
    background-position: -64px -16px;
}

.ui-icon-triangle-1-n {
    background-position: 0 -16px;
    margin-left: 1px;
}

.ui-state-disabled, .ui-widget-content .ui-state-disabled, .ui-widget-header .ui-state-disabled {
    opacity: 0.35;
}


.reportInfoWrapper {
  width: 580px;
}

//
// Confidence Level Bar
//

.losPerfBar {
  height: 80px;
}
/* ... */

